--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,3 +1,4 @@
+<!-- change on line 33 to say client instead of customer -->
 <div class="navbar navbar-default navbar-static-top" ng-controller="NavbarController">
   <div class="container">
     <div class="navbar-header">
@@ -29,7 +30,7 @@
         </li>
         <span ng-repeat-end></span>
         <li ng-if="nav.isAdmin()" ui-sref-active="active"><a ui-sref="admin.createAccount" class="navBarButton" id="Admin" ng-click="nav.isCollapsed = true">Admin</a></li>
-        <li ng-if="nav.isLoggedIn() && !nav.isAdmin()" ui-sref-active="active"><a ng-click="nav.isCollapsed = true; nav.navigate()" ui-sref="customer">Manage</a></li>
+        <li ng-if="nav.isLoggedIn() && !nav.isAdmin()" ui-sref-active="active"><a ng-click="nav.isCollapsed = true; nav.navigate()" ui-sref="client">Manage</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
