--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,3 +1,5 @@
+<!--Added line to include navbar if super admin on line 32 -->
+<!--Added logic to check if super admin on line 35-->
 <div class="navbar navbar-default navbar-static-top" ng-controller="NavbarController">
   <div class="container">
     <div class="navbar-header">
@@ -28,8 +30,9 @@
           <a ui-sref="{{item.state}}" class="navBarButton" ng-click="nav.isCollapsed = true">{{item.title}}</a>
         </li>
         <span ng-repeat-end></span>
+        <li ng-if="nav.isSuperAdmin()" ui-sref-active ="active"><a ui-sref="superAdmin.updatePictures" class="navBarButton" id="superAdmin" ng-click="nav.isCollapsed = true">Super Admin</a></li>
         <li ng-if="nav.isAdmin()" ui-sref-active="active"><a ui-sref="admin.createAccount" class="navBarButton" id="Admin" ng-click="nav.isCollapsed = true">Admin</a></li>
-        <li ng-if="nav.isLoggedIn() && !nav.isAdmin()" ui-sref-active="active"><a ng-click="nav.isCollapsed = true; nav.navigate()" ui-sref="customer">Manage</a></li>
+        <li ng-if="nav.isLoggedIn() && !nav.isAdmin() && !nav.isSuperAdmin()" ui-sref-active="active"><a ng-click="nav.isCollapsed = true; nav.navigate()" ui-sref="customer">Manage</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
