info is passed to modal

--- a/client/app/client/partials/welcome/welcomeModal/welcomeModal.html
+++ b/client/app/client/partials/welcome/welcomeModal/welcomeModal.html
@@ -6,7 +6,6 @@
       </h2>
       <div class="modal-body">
         <container>
-          <div ng-controller="WelcomeModalCtrl" ng-init="getEventSubcons()">
             <div style="text-align:center">
               <h1> Your {{ev.name}} </h1>
               <h3> is on {{ev.date | date: 'fullDate'}}</h3>
@@ -100,8 +99,7 @@
         </tr>
       </tbody>
     </table>
-  </div> -->
-</div>
+  </div> -
 </container>
 </div>
 </div>
