--- a/client/app/client/partials/welcome/welcomeModal/welcomeModal.html
+++ b/client/app/client/partials/welcome/welcomeModal/welcomeModal.html
@@ -1,11 +1,12 @@
 <div id="welcomeModal">
-  <div class="modal-content">
-    <div>
-      <h2 class="modal-header">
-        Your Event
-      </h2>
-      <div class="modal-body">
-        <container>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div>
+        <h2 class="modal-header">
+          Your Event
+        </h2>
+        <div class="modal-body">
+          <container>
             <div style="text-align:center">
               <h1> Your {{ev.name}} </h1>
               <h3> is on {{ev.date | date: 'fullDate'}}</h3>
@@ -104,6 +105,7 @@
 </div>
 </div>
 <div class="modal-footer">
+</div>
 </div>
 </div>
 </div>
