--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -35,7 +35,7 @@
         <span ng-repeat-end></span>
         <li ng-if="nav.isSuperAdmin()" ui-sref-active ="active"><a ui-sref = "superAdmin.updatePictures" class="navBarButton" id="superAdmin" ng-click="nav.isCollapsed = true">Super Admin</a></li>
         <li ng-if="nav.isAdmin()" ui-sref-active="active"><a ui-sref="admin.createAccount" class="navBarButton" id="Admin" ng-click="nav.isCollapsed = true">Admin</a></li>
-        <li ng-if="nav.isLoggedIn() && !nav.isAdmin()" ui-sref-active="active"><a ng-click="nav.isCollapsed = true; nav.navigate()" ui-sref="client">Manage</a></li>
+        <li ng-if="nav.isLoggedIn() && !nav.isAdmin() && !nav.isSuperAdmin()" ui-sref-active="active"><a ng-click="nav.isCollapsed = true; nav.navigate()" ui-sref="client">Manage</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
