--- a/client/app/client/partials/welcome/welcome.html
+++ b/client/app/client/partials/welcome/welcome.html
@@ -1,27 +1,103 @@
 <div class = "container-fluid">
-
   <div ng-controller="WelcomeCtrl" ng-init="getEvents()">
+      <h2>Welcome, {{clientName}} </h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th><b>Event Name</b></td>
+            <th><b>Location</b></td>
+            <th><b>Date</b></td>
+            <th></td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="event in events">
+            <td>{{event.name}}</td>
+            <td>{{event.location}}</td>
+            <td>{{event.date.substring(5,10) + '-' + event.date.substring(0,4)}}</td>
+            <td> <button class = "btn btn-primary" ng-click="toggle(event)">Details</button></td>
+          </tr>
+        </tbody>
+      </table>
 
-    <h2>Welcome, {{clientName}} </h2>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th><b>Event Name</b></td>
-          <th><b>Location</b></td>
-          <th><b>Date</b></td>
-          <th></td>
-        </tr>
-      </thead>
 
-      <tbody>
-        <tr ng-repeat="event in events">
-          <td>{{event.name}}</td>
-          <td>{{event.location}}</td>
-          <td>{{event.date.substring(5,10) + '-' + event.date.substring(0,4)}}</td>
-          <td> <btn class = "btn btn-primary" ng-click="openModal(event)"> Details</btn></td>
-        </tr>
-      </tbody>
-    </table>
+
+      <div ng-show="state" ng-init="getEventSubcons()">
+      <div style="text-align:center">
+        <h3> Your {{ev.name}} </h3>
+        <h5> is on {{ev.date | date: 'fullDate'}}</h5>
+        <h5> at {{ev.location}}</h5>
+      </div>
+        <!--Your budget-->
+        <div class = "col-md-12">
+          <div class = "col-md-6">
+            <h4 align="center">Your Budget</h4>
+            <nvd3 options="options" data="ev.budget"></nvd3>
+          </div>
+          <!-- Display Guest List -->
+          <div class = "col-md-6" ng-init="sortGuest='name'">
+            <h4 style="text-align:center">Guest List</h4>
+            <table class = "table table-hover hoverSort">
+              <thead>
+                <tr>
+                  <!-- <th ng-click="sortGuest='name'"><b>Name</b></th>
+                  <th ng-click="sortGuest='email'"><b>Email</b></th>
+                  <th ng-click="sortGuest='phoneNumber'"><b>Phone Number</b></th>
+                  <th ng-click="sortGuest='partySize'"><b>Party Size</b></th>
+                  <th ng-click="sortGuest='accepted'"><b>Accepted</b></th> -->
+                  <th ng-click="sortGuest='accepted'"><b>Accepted</b></th>
+                  <th ng-click="sortGuest='declined'"><b>Declined</b></th>
+                  <th ng-click="sortGuest='pending'"><b>Pending</b></th>
+                </tr>
+              </thead>
+              <tbody ng-repeat ="item in ev.guests | orderBy: sortGuest" ng-show="hasItems(ev.guests)">
+                <tr>
+                  <td>{{item.name}}</td>
+                  <td>{{item.email}}</td>
+                  <td>{{item.phoneNumber}}</td>
+                  <td>{{item.partySize}}</td>
+                  <td><span ng-class="(item.accepted) ? 'fa fa-check-square-o fa-lg' : 'fa fa-square-o fa-lg'"></span></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <!-- Display Todo Calendar -->
+        <div class = "col-md-12">
+          <div class="col-md-6">
+            <div style="text-align:center">
+              <h4>{{calendarDate | date: 'MMMM yyyy'}}</h4>
+              <button class="btn btn-primary" mwl-date-modifier date="calendarDate" decrement="calendarView">Prev Month</button>
+              <button class="btn btn-primary" mwl-date-modifier date="calendarDate" set-to-today>Today</button>
+              <button class="btn btn-primary" mwl-date-modifier date="calendarDate" increment="calendarView">Next Month</button>
+              <br>
+            </div>
+            <mwl-calendar view="calendarView" view-date="calendarDate" events="todo" view-title="calendarTitle" on-view-change-click="false">
+            </mwl-calendar>
+          </div>
+          <!-- display table of todolist -->
+          <div class = "col-md-6">
+            <h4 style="text-align:center">Task List</h4>
+            <table class = "table table-hover">
+              <thead>
+                <tr>
+                  <th><b>Task</b></th>
+                  <th><b>Date</b></th>
+                  <th><b>Done</b></th>
+                </tr>
+              </thead>
+
+              <tbody ng-repeat ="item in ev.toDoList" ng-show="hasItems(ev.toDoList)">
+                <tr>
+                  <td>{{item.todo}}</td>
+                  <td>{{item.by | date:"EEEE, MMM. d, yyyy @h:mm a"}}</td>
+                  <td><span ng-class="(item.done) ? 'fa fa-check-square-o fa-lg' : 'fa fa-square-o fa-lg'" ng-click="changeDone($index)"></span></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
 
   </div>
 </div>
