--- a/client/app/client/partials/manageGuestList/manageGuestList.html
+++ b/client/app/client/partials/manageGuestList/manageGuestList.html
@@ -3,6 +3,9 @@
   <div ng-controller="manageGuestListCtrl" ng-init="getEvents();">
 
     <h2>Your Guests </h2>
+    <select>
+      <option ng-model="selectedEvent" value="event" ng-repeat="event in events" ng-click="getGuests(event)">{{event.name}}</option>
+    </select>
     <div class="col-md-5" style="padding-left:0px;float: right;">
       <input "type=text" class="form-control" placeholder="Search here..." ng-model="searchGuests"></input>
     </div>
@@ -17,7 +20,7 @@
         </tr>
       </thead>
       <tbody>
-         <tr ng-repeat ="item in event.guests" >
+         <tr ng-repeat ="item in ev.guests" >
            <!-- | filter: searchGuests -->
           <td>{{item.name}}</td>
           <td>{{item.partySize}}</td>
