Updated page layout. Able to get guests to display with toggle

--- a/client/app/client/partials/addGuest/addGuest.html
+++ b/client/app/client/partials/addGuest/addGuest.html
@@ -18,9 +18,9 @@
             <label for="accommodations">Accommodations</label>
             <input name="accommodations"type="accommodations" ng-model="accommodations" id="accommodations" class="form-control">
           </div>
-          <div class="form-group" show-errors>
+          <div show-errors>
             <label for="attending">Attending</label>
-            <input name="attending" type="attending" ng-model="attending" id="attending" class="form-control">
+            <input name="attending" type="checkbox" ng-model="attending" id="attending" class="form-control">
           </div>
           <div ng-show="error" class="text-danger">
             <strong ng-bind="error"></strong>
