--- a/client/app/client/partials/uploadTestimonial/uploadTestimonial.html
+++ b/client/app/client/partials/uploadTestimonial/uploadTestimonial.html
@@ -1,38 +1,38 @@
 <div class = "container-fluid">
-  <div ng-controller="UploadTestimonialCtrl" ng-init="getEvents()">
+  <div ng-controller="UploadTestimonialCtrl">
       <h2>Upload a Testimonial</h2>
       <h6>Loved the service? Let us know below!</h6>
       <div class="well well-sm">
         <form name="form" class="form-horizontal">
           <fieldset>
             <legend class="text-left header">Testimonial</legend>
-            <p class="text-center" ng-if="emailSuccess">
-              Your email has been successfully send.  Thank you!
+            <p class="text-center" ng-if="submitSuccess">
+              Your testimonial has been submitted.  Thank you!
             </p>
-            <p class="text-center" ng-if="emailError">
-              Oops!  An error occured while sending your email.
+            <p class="text-center" ng-if="submitError">
+              Oops!  An error occured while submitting your testimonial.
             </p>
             <div class="form-group">
               <span class="col-md-2"><i class="fa fa-user bigicon fa-2x"></i></span>
               <div class="col-md-10">
-                <input id="name" name="name" type="text" placeholder="Name" class="form-control" ng-model="name" required>
+                <input id="clientName" name="clientName" type="clientName" placeholder="Name" class="form-control" ng-model="cleintName" required>
               </div>
             </div>
             <div class="form-group">
               <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon fa-2x"></i></span>
               <div class="col-md-8">
-                <input id="ename" name="name" type="text" placeholder="Event Description" class="form-control" ng-model="ename" required>
+                <input id="eventDescription" name="eventDescription" type="eventDescription" placeholder="Event Description" class="form-control" ng-model="eventDescription" required>
               </div>
             </div>
             <div class="form-group">
               <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon fa-2x"></i></span>
               <div class="col-md-8">
-                <textarea class="form-control" id="message" name="message" placeholder="Enter your message for us here. We will get back to you within 2 business days." rows="7" ng-model="message"></textarea>
+                <textarea class="form-control" id="message" name="message" placeholder="Enter your testimonial for us here." rows="7" ng-model="message"></textarea>
               </div>
             </div>
             <div class="form-group">
               <div class="col-md-8 text-center">
-                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                <button type="submit" class="btn btn-primary btn-lg" ng-click="submit()">Submit</button>
               </div>
             </div>
           </fieldset>
