--- a/client/app/client/partials/manageGuestList/manageGuestList.html
+++ b/client/app/client/partials/manageGuestList/manageGuestList.html
@@ -21,7 +21,7 @@
       </table>
 
 
-      <div ng-show="state" ng-init="getEventSubcons()">
+      <div ng-show="state">
         <!-- Display Guest List -->
         <div class = "col-md-12" ng-init="sortGuest='name'">
           <div class="col-md-5" style="padding-left:0px;float: left;">
