--- a/client/app/client/partials/manageGuestList/manageGuestList.html
+++ b/client/app/client/partials/manageGuestList/manageGuestList.html
@@ -48,7 +48,7 @@
                   <td>{{item.partySize}}</td>
                   <td>{{item.accommodations}}</td>
                   <td><span ng-class="(item.accepted) ? 'fa fa-check-square-o fa-lg' : 'fa fa-square-o fa-lg'"></span></td>
-                  <td><span class="glyphicon glyphicon-edit"></span></td>
+                  <td><span class="glyphicon glyphicon-edit" ng-click="editGuest()"></span></td>
                 </tr>
               </tbody>
               <tfoot>
