--- a/client/app/client/partials/viewBudget/viewBudget.html
+++ b/client/app/client/partials/viewBudget/viewBudget.html
@@ -1,42 +1,52 @@
 <div class = "container-fluid">
-  <div ng-controller="viewBudgetCtrl" ng-init="getEvents()">
+  <div class="view-budget-page" ng-controller="viewBudgetCtrl" ng-init="getEvents()">
       <h2>Welcome, {{clientName}} </h2>
       <h3>VIEW BUDGET PAGE</h3>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th><b>Event Name</b></td>
-            <th><b>Location</b></td>
-            <th><b>Date</b></td>
-            <th><b>Budget</b></td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Event 1</td>
-            <td>Location 1</td>
-            <td>Date 1</td>
-            <td><button class="btn btn-info" type="button" name="button">View Budget</button></td>
-          </tr>
-          <tr ng-repeat="event in events">
-            <td>{{event.name}}</td>
-            <td>{{event.location}}</td>
-            <td>{{event.date.substring(5,10) + '-' + event.date.substring(0,4)}}</td>
-            <td> <button class = "btn btn-primary" ng-click="toggle(event)">Budget</button></td>
-          </tr>
-        </tbody>
-      </table>
 
-
-
-      <div ng-show="state" ng-init="getEventSubcons()">
-        <!--Your budget-->
-        <div class = "col-md-12">
-          <div class = "col-md-6">
-            <h4 align="center">Your Budget</h4>
-            <nvd3 options="options" data="ev.budget"></nvd3>
+      <div class="row">
+        <form class="form-inline col-md-10 col-md-offset-1" id="view-budget-form">
+          <p>Add Expenditure:</p>
+          <div class="form-group">
+            <label class="sr-only" for="inputExpenditure">Expenditure</label>
+            <input type="text" class="form-control" id="inputExpenditure" placeholder="Expenditure">
           </div>
-        </div>
+          <div class="form-group" id="price-input">
+            <label class="sr-only" for="inputAmount">Amount</label>
+            <div class="input-group">
+              <div class="input-group-addon">$</div>
+              <input type="text" class="form-control" id="inputAmount" placeholder="Amount">
+              <div class="input-group-addon">.00</div>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-success">Add</button>
+        </form>
+      </div>
+
+      <div class="row">
+        <table class="table table-hover col-md-10 col-md-offset-1">
+          <thead>
+            <tr>
+              <th><b>Expenditure</b></td>
+              <th><b>Price</b></td>
+              <th><b></b></td>
+              <th><b></b></td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Food</td>
+              <td>$200.00</td>
+              <td><button class="btn btn-danger" name="remove">Remove</button></td>
+              <td><button class="btn btn-info" >Edit</button></td>
+            </tr>
+            <tr ng-repeat="event in events">
+              <td>{{event.name}}</td>
+              <td>{{event.location}}</td>
+              <td>{{event.date.substring(5,10) + '-' + event.date.substring(0,4)}}</td>
+              <td> <button class = "btn btn-primary" ng-click="toggle(event)">Budget</button></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
 
   </div>
