--- a/client/app/client/partials/viewBudget/viewBudget.html
+++ b/client/app/client/partials/viewBudget/viewBudget.html
@@ -1,7 +1,75 @@
 <div class = "container-fluid">
+  <div ng-controller="viewBudgetCtrl" ng-init="getEvents()">
+    <h2>Welcome, {{clientName}} </h2>
+    <h4>VIEW BUDGET PAGE</h4>
+
+    <div class="row">
+      <form class="form-inline col-md-10 col-md-offset-1" id="view-budget-form">
+        <p>Add Expenditure:</p>
+        <div class="form-group">
+          <label class="sr-only" for="inputExpenditure">Expenditure</label>
+          <input type="text" class="form-control" id="inputExpenditure" placeholder="Expenditure">
+        </div>
+        <div class="form-group" id="price-input">
+          <label class="sr-only" for="inputAmount">Amount</label>
+          <div class="input-group">
+            <div class="input-group-addon">$</div>
+            <input type="text" class="form-control" id="inputAmount" placeholder="Amount">
+            <div class="input-group-addon">.00</div>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-success">Add</button>
+      </form>
+    </div>
+
+    <div class="row">
+      <table class="table table-hover col-md-10 col-md-offset-1">
+        <thead>
+          <tr>
+            <th><b>Expenditure</b></td>
+            <th><b>Price</b></td>
+            <th><b></b></td>
+            <th><b></b></td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Food</td>
+            <td>$200.00</td>
+            <td><button class="btn btn-danger" name="remove">Remove</button></td>
+            <td><button class="btn btn-info" >Edit</button></td>
+          </tr>
+          <tr ng-repeat="expense in event.budget">
+            <td>{{expense.title}}</td>
+            <td>{{expense.amount}}</td>
+            <td><button class="btn btn-danger" name="remove">Remove</button></td>
+            <td><button class="btn btn-info" ng-click="toggle(event)" >Edit</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+
+
+      <div ng-show="state" ng-init="getEventSubcons()">
+        <!--Your budget-->
+        <div class = "col-md-12">
+          <div class = "col-md-6">
+            <h4 align="center">Your Budget</h4>
+            <nvd3 options="options" data="ev.budget"></nvd3>
+          </div>
+        </div>
+      </div>
+
+  </div>
+</div>
+
+
+<!-- <div class = "container-fluid">
   <div class="view-budget-page" ng-controller="viewBudgetCtrl" ng-init="getEvents()">
       <h2>Welcome, {{clientName}} </h2>
-      <h3>VIEW BUDGET PAGE</h3>
+      <h4>Event: {{event}}</h4>
+      <h4>VIEW BUDGET PAGE</h4>
 
       <div class="row">
         <form class="form-inline col-md-10 col-md-offset-1" id="view-budget-form">
@@ -50,4 +118,4 @@
       </div>
 
   </div>
-</div>
+</div> -->
