--- a/client/app/superAdmin/partials/createAccount/createAccount.html
+++ b/client/app/superAdmin/partials/createAccount/createAccount.html
@@ -26,15 +26,16 @@
           </p>
         </div>
 
-<!--
+
         <label>Account Type</label>
-          <select name="role" ng-model="accCtrl.user.role">
-            <option value="client">Client</option>
-            <option value="admin">Admin</option>
-          </select>
-          <br><br>
--->
-<!--Would it be more intuitive to have a dropdown instead of a text entry? -->
+        <br>
+        <select name="role" id="selectRole" ng-model="accCtrl.user.role">
+          <option value="user" >Client</option>
+          <option value="admin">Admin</option>
+        </select>
+        </br>
+
+<!--Would it be more intuitive to have a dropdown instead of a text entry?
         <div class="form-group" ng-class="{'has-success': form.role.$valid && accCtrl.submitted, 'has-error' : form.role.$invalid && accCtrl.submitted }">
           <label>Account Type</label>
           <input type="text" name="role" class="form-control" ng-model="accCtrl.user.role" placeholder="admin or user" required />
@@ -42,7 +43,8 @@
             A role is required.
           </p>
         </div>
-
+-->
+        <br>
         <div class="form-group" ng-class="{'has-success': form.password.$valid && accCtrl.submitted, 'has-error' : form.password.$invalid && accCtrl.submitted}">
           <label>Password</label>
           <input type="password" name="password" class="form-control" ng-model="accCtrl.user.password" ng-minlength="3" required mongoose-error/>
