--- a/client/app/superAdmin/partials/manageAccounts/manageAccounts.html
+++ b/client/app/superAdmin/partials/manageAccounts/manageAccounts.html
@@ -5,24 +5,54 @@
       <input type="text" class="form-control" placeholder="Search here..." ng-model="searchClients"></input>
     </div>
   </div>
-  <table class="table table-hover hoverSort">
-      <thead>
-        <tr>
-          <th ng-click="sort='name'"><b>Name</b></td>
-          <th ng-click="sort='phoneNumber'"><b>Phone Number</b></td>
-          <th ng-click="sort='email'"><b>Email</b></td>
-          <th ng-click="sort"='role'><b>Account Type</b></td>
-          <th></td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="user in mc.alldata | filter: 'user' | filter: searchClients | orderBy: sort">
-            <td>{{user.name}}</td>
-            <td>{{user.phoneNumber | phone}}</td>
-            <td>{{user.email}}</td>
-            <td>{{user.role}}</td>
-            <td><button type="button" class="btn btn-md btn-default" ng-click=mc.openModal(user)>Manage</button></td>
-        </tr>
-      </tbody>
-  </table>
+  <tabset>
+    <tab heading="User Accounts">
+      <br>
+      <table class="table table-hover hoverSort">
+          <thead>
+            <tr>
+              <th ng-click="sort='name'"><b>Name</b></td>
+              <th ng-click="sort='phoneNumber'"><b>Phone Number</b></td>
+              <th ng-click="sort='email'"><b>Email</b></td>
+              <th ng-click="sort"='role'><b>Account Type</b></td>
+              <th></td>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr ng-repeat="user in mc.alldata | filter: 'user'| filter: searchClients | orderBy: sort">
+                <td>{{user.name}}</td>
+                <td>{{user.phoneNumber | phone}}</td>
+                <td>{{user.email}}</td>
+                <td>{{user.role}}</td>
+                <td><button type="button" class="btn btn-md btn-default" ng-click=mc.openModal(user)>Manage</button></td>
+            </tr>
+          </tbody>
+      </table>
+    </tab>
+
+    <tab heading="Admin Accounts">
+      <br>
+      <table class="table table-hover hoverSort">
+          <thead>
+            <tr>
+              <th ng-click="sort='name'"><b>Name</b></td>
+              <th ng-click="sort='phoneNumber'"><b>Phone Number</b></td>
+              <th ng-click="sort='email'"><b>Email</b></td>
+              <th ng-click="sort"='role'><b>Account Type</b></td>
+              <th></td>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr ng-repeat="user in mc.alldata | filter: 'admin' | filter: searchClients | orderBy: sort">
+                <td>{{user.name}}</td>
+                <td>{{user.phoneNumber | phone}}</td>
+                <td>{{user.email}}</td>
+                <td>{{user.role}}</td>
+                <td><button type="button" class="btn btn-md btn-default" ng-click=mc.openModal(user)>Manage</button></td>
+            </tr>
+          </tbody>
+      </table>
+  </tabset>
 </div>
