--- a/client/app/client/partials/manageEvent/manageEvent.html
+++ b/client/app/client/partials/manageEvent/manageEvent.html
@@ -32,52 +32,19 @@
               <div class = "col-md-12">
                 <div class = "col-md-6">
                   <h4 align="center">Event Location</h4>
-                  <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+                  <div>
+                  <ui-gmap-google-map ng-if="map.center" center="map.center" zoom="map.zoom"></ui-gmap-google-map>
+                </div>
                   <!-- <nvd3 options="options" data="ev.budget"></nvd3> -->
                 </div>
                 <!-- Display Guest List -->
                 <div class = "col-md-6" ng-init="sortGuest='name'">
-                  <h4 style="text-align:center">Guest List</h4>
-                  <table class = "table table-hover hoverSort">
-                    <thead>
-                      <tr>
-                        <!-- <th ng-click="sortGuest='name'"><b>Name</b></th>
-                        <th ng-click="sortGuest='email'"><b>Email</b></th>
-                        <th ng-click="sortGuest='phoneNumber'"><b>Phone Number</b></th>
-                        <th ng-click="sortGuest='partySize'"><b>Party Size</b></th>
-                        <th ng-click="sortGuest='accepted'"><b>Accepted</b></th> -->
-                        <th ng-click="sortGuest='accepted'"><b>Accepted</b></th>
-                        <th ng-click="sortGuest='declined'"><b>Declined</b></th>
-                        <th ng-click="sortGuest='pending'"><b>Pending</b></th>
-                      </tr>
-                    </thead>
-                    <tbody ng-repeat ="item in ev.guests | orderBy: sortGuest" ng-show="hasItems(ev.guests)">
-                      <tr>
-                        <td>{{item.name}}</td>
-                        <td>{{item.email}}</td>
-                        <td>{{item.phoneNumber}}</td>
-                        <td>{{item.partySize}}</td>
-                        <td><span ng-class="(item.accepted) ? 'fa fa-check-square-o fa-lg' : 'fa fa-square-o fa-lg'"></span></td>
-                      </tr>
-                    </tbody>
-                  </table>
+                  <h4 style="text-align:center">Event Details</h4>
                 </div>
               </div>
               <!-- Display Todo Calendar -->
               <div class = "col-md-12">
                 <div class="col-md-6">
-                  <div style="text-align:center">
-                    <h4>{{calendarDate | date: 'MMMM yyyy'}}</h4>
-                    <button class="btn btn-primary" mwl-date-modifier date="calendarDate" decrement="calendarView">Prev Month</button>
-                    <button class="btn btn-primary" mwl-date-modifier date="calendarDate" set-to-today>Today</button>
-                    <button class="btn btn-primary" mwl-date-modifier date="calendarDate" increment="calendarView">Next Month</button>
-                    <br>
-                  </div>
-                  <mwl-calendar view="calendarView" view-date="calendarDate" events="todo" view-title="calendarTitle" on-view-change-click="false">
-                  </mwl-calendar>
-                </div>
-                <!-- display table of todolist -->
-                <div class = "col-md-6">
                   <h4 style="text-align:center">Task List</h4>
                   <table class = "table table-hover">
                     <thead>
@@ -96,6 +63,10 @@
                       </tr>
                     </tbody>
                   </table>
+                </div>
+                <!-- display table of todolist -->
+                <div class = "col-md-6">
+
                 </div>
               </div>
             </div>
