--- a/client/app/client/partials/uploadTestimonial/uploadTestimonial.html
+++ b/client/app/client/partials/uploadTestimonial/uploadTestimonial.html
@@ -3,7 +3,7 @@
       <h2>Upload a Testimonial</h2>
       <h6>Loved the service? Let us know below!</h6>
       <div class="well well-sm">
-        <form name="form" class="form-horizontal">
+        <form name="form" class="form-horizontal" ng-submit="submit()">
           <fieldset>
             <legend class="text-left header">Testimonial</legend>
             <p class="text-center" ng-if="submitSuccess">
@@ -13,13 +13,13 @@
               Oops!  An error occured while submitting your testimonial.
             </p>
             <div class="form-group">
-              <span class="col-md-2"><i class="fa fa-user bigicon fa-2x"></i></span>
-              <div class="col-md-10">
-                <input id="clientName" name="clientName" type="clientName" placeholder="Name" class="form-control" ng-model="cleintName" required>
+              <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon fa-2x"></i></span>
+              <div class="col-md-8">
+                <input id="postName" name="postName" type="postName" placeholder="Name" class="form-control" ng-model="postName" required>
               </div>
             </div>
             <div class="form-group">
-              <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon fa-2x"></i></span>
+              <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-bookmark-o fa-2x"></i></span>
               <div class="col-md-8">
                 <input id="eventDescription" name="eventDescription" type="eventDescription" placeholder="Event Description" class="form-control" ng-model="eventDescription" required>
               </div>
@@ -27,12 +27,12 @@
             <div class="form-group">
               <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon fa-2x"></i></span>
               <div class="col-md-8">
-                <textarea class="form-control" id="message" name="message" placeholder="Enter your testimonial for us here." rows="7" ng-model="message"></textarea>
+                <textarea class="form-control" id="message" name="message" maxlength="500" placeholder="Enter your testimonial for us here." rows="7" ng-model="message"></textarea>
               </div>
             </div>
             <div class="form-group">
               <div class="col-md-8 text-center">
-                <button type="submit" class="btn btn-primary btn-lg" ng-click="submit()">Submit</button>
+                <button type="submit" class="btn btn-primary btn-lg"er>Submit</button>
               </div>
             </div>
           </fieldset>
